# fork-eater

./: .gitignore  AGENTS.md  CMakeLists.txt  DPI_SCALING.md  GEMINI.md  GeneratedShaderTemplates.h  Makefile  README.md  SHADER_DEVELOPMENT.md  TODO.md  WARP.md  build.sh  cmake_install.cmake  imgui.ini  install.sh  run.sh  test_exit.sh
docs/: README.md
docs/features/: library-export.md  render-scaling.md  shader-pragmas.md  timeline-fps-indicator.md
include/: ErrorPanel.h  FileManager.h  FileWatcher.h  Framebuffer.h  LeftPanel.h  Logger.h  MenuSystem.h  ParameterPanel.h  PreviewPanel.h  RenderScaleMode.h  Settings.h  ShaderEditor.h  ShaderManager.h  ShaderPreprocessor.h  ShaderProject.h  ShaderTemplates.h  ShortcutManager.h  Timeline.h
libs/: camera.glsl  color.glsl  hash.glsl  iq.glsl  noise.glsl  raymarching_vec3.glsl  relaxed_sphere_tracing.glsl  smin.glsl
project/test/: 4k-eater.project
project/test/shaders/: simple.frag
projects/sample-project/: 4k-eater.project
projects/sample-project/shaders/: colorful.frag
shaders/: basic.frag
shaders/basic/: 4k-eater.project
shaders/basic/shaders/: basic.frag
shaders/templates/music/: music.frag
shaders/templates/simple/: manifest.json
src/: ErrorPanel.cpp  FileManager.cpp  FileWatcher.cpp  Framebuffer.cpp  LeftPanel.cpp  Logger.cpp  MenuSystem.cpp  ParameterPanel.cpp  PreviewPanel.cpp  Settings.cpp  ShaderEditor.cpp  ShaderManager.cpp  ShaderPreprocessor.cpp  ShaderProject.cpp  ShaderTemplates.cpp  ShortcutManager.cpp  Timeline.cpp  main.cpp
templates/basic/: basic.frag  manifest.json
templates/mouse/: manifest.json  mouse.frag
templates/music/: manifest.json  music.frag
templates/raymarching/: dof.frag  manifest.json  raymarching.frag
templates/simple/: simple.frag
templates/test_include/: manifest.json  test_include.frag
templates/test_lib/: manifest.json
test_include_project/: 4k-eater.project
test_include_project/shaders/: test_include.frag
test_project/: 4k-eater.project  uniforms.json
test_project/shaders/: first.frag  test_lib.frag  test_lib.vert
test_project_range/: 4k-eater.project
test_project_range/shaders/: test.frag
vscode-extension/: .vscodeignore  LICENSE  Makefile  README.md  language-configuration.json  package-lock.json  package.json
vscode-extension/client/: package-lock.json  package.json
vscode-extension/client/src/: extension.ts
vscode-extension/schemas/: project-schema.json
vscode-extension/scripts/: generate-libs-index.js
vscode-extension/server/: package-lock.json  package.json  tsconfig.json
vscode-extension/server/libs/: noise.glsl  utils.glsl
vscode-extension/server/src/: libs-index.json  server.ts
